--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ cookies.txt
 sso_data.json
 
 # Local static resources
+backend_static/
 static/product_images/
 static/data/details/
 doctor_shop.db
